Fixed Spacing, Moved Btns, Restyled Green Button
Fixed Spacing, Moved Contact + Social BTNs to a second line, fits
better on mobile. Also updated transparency for the green-button, so
that the hover effect was more noticeable. (0.8 to 0.7 on initial)

--- a/assets/style.css
+++ b/assets/style.css
@@ -72,7 +72,7 @@ h3.shift {
   border-color: rgba(0,0,0,0.1);
 }
 .btn-green {
-  background-color: rgba(18, 184, 134, 0.8) !important;
+  background-color: rgba(18, 184, 134, 0.7) !important;
   color: white !important;
 }
 .btn-green:hover {
